--- a/views/loginAdmin.ejs
+++ b/views/loginAdmin.ejs
@@ -25,7 +25,7 @@
                     <p class="error-message"><%= error %></p>
                 <% } %>
 
-                <form action="/auth/admin" method="POST">
+                <form action="/auth/loginAdmin" method="POST">
                     <div class="input-group">
                         <label for="email">Email</label>
                         <input type="text" id="email" name="email" class="login-input" placeholder="Enter your email" required>
